# synthetic_sampling

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/synthetic_sampling/: __init__.py  cli.py
src/synthetic_sampling/ESS/2020/: climate_change_eu.json  demographics.json  discriminated_by_char_lang_country_origin.json  relationship_parents_and_at_work.json  religion.json  understanding_democracy.json
src/synthetic_sampling/ESS/2023/: employment_income.json  gender_equality.json  religion.json  well_being_emot_attachment.json
src/synthetic_sampling/eval/: compute_label_logprobs.py  config.py  data_processing.py  main.py  mapper.py  metrics.py
src/synthetic_sampling/mappings/: country_specific_variables.json
src/synthetic_sampling/mappings/ESS/2020/: human_values.json  internet_use_social_trust.json
src/synthetic_sampling/mappings/ESS/2023/: party_affiliation_voting_behavior.json
src/synthetic_sampling/mappings/WVS/: output_full.json
src/synthetic_sampling/profiles/: create_profiles.py  survey_profile_generator.py  survey_profile_generator.py.txt
src/synthetic_sampling/profiles/mappings/ESS/2020/: activism.json  party_affiliation_voting_behavior.json  political_opinions.json
src/synthetic_sampling/profiles/mappings/WVS/: updated_wvs_mappings.json
tests/: __init__.py  test_synthetic_sampling.py
