[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic_sampling"
version = "0.1.0"
description = "LLMs for syntehtic sampling usecase in social sciences"
readme = "README.rst"
authors = [
  {name = "Ilya Boytsov", email = "ilyaboytsov1805@gmail.com"}
]
maintainers = [
  {name = "Ilya Boytsov", email = "ilyaboytsov1805@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/iboytsov/synthetic_sampling/issues"
changelog = "https://github.com/iboytsov/synthetic_sampling/blob/master/changelog.md"
homepage = "https://github.com/iboytsov/synthetic_sampling"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

